--- a/a/index.html
+++ b/a/index.html
@@ -1,195 +1,97 @@
-<!DOCTYPE html><html lang="en">
+<!DOCTYPE html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PDF Reader</title>
   <style>
-    body { margin: 0; font-family: sans-serif; overflow: hidden; background: #121212; color: #fff; }
-    canvas { display: block; margin: 0 auto; background: #fff; }#menuBtn {
-  position: fixed;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  font-size: 24px;
-  z-index: 10;
-  background: #333;
-  border: 1px solid #555;
-  color: #fff;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-}
-
-#menu {
-  display: none;
-  position: fixed;
-  bottom: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #222;
-  padding: 10px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px #000;
-  z-index: 10;
-}
-#menu button {
-  display: block;
-  margin: 5px 0;
-  width: 200px;
-  background: #444;
-  color: #fff;
-  border: none;
-  padding: 8px;
-  border-radius: 4px;
-}
-
-#sliderContainer {
-  display: none;
-  position: fixed;
-  bottom: 10px;
-  left: 50%;
-  transform: translateX(-50%);
-  width: 80%;
-  z-index: 10;
-}
-
-#pageNum {
-  position: fixed;
-  bottom: 60px;
-  left: 50%;
-  transform: translateX(-50%);
-  background: rgba(0,0,0,0.7);
-  color: #fff;
-  padding: 4px 8px;
-  border-radius: 4px;
-  z-index: 10;
-  display: none;
-}
-
-#libraryPopup {
-  display: none;
-  position: fixed;
-  top: 10%;
-  left: 50%;
-  transform: translateX(-50%);
-  background: #222;
-  max-height: 70%;
-  overflow: auto;
-  width: 300px;
-  padding: 10px;
-  border-radius: 8px;
-  box-shadow: 0 0 10px #000;
-  z-index: 10;
-}
-#libraryPopup ul {
-  list-style: none;
-  padding: 0;
-  margin: 0;
-}
-#libraryPopup li {
-  padding: 8px;
-  border-bottom: 1px solid #444;
-  cursor: pointer;
-}
-
+    body { margin: 0; background: #121212; color: white; font-family: sans-serif; overflow: hidden; }
+    canvas { display: block; margin: auto; background: white; }
+    #menuBtn {
+      position: fixed; bottom: 20px; left: 50%; transform: translateX(-50%);
+      background: #333; color: white; border: none; border-radius: 50%; width: 40px; height: 40px;
+    }
+    #menu {
+      position: fixed; bottom: 70px; left: 50%; transform: translateX(-50%);
+      background: #222; padding: 10px; border-radius: 8px; display: none;
+    }
+    #menu button { margin: 5px 0; width: 200px; background: #444; color: white; border: none; padding: 8px; border-radius: 4px; }
+    #sliderContainer {
+      position: fixed; bottom: 10px; left: 10%; right: 10%; display: none;
+    }
+    #pageNum {
+      position: fixed; bottom: 60px; left: 50%; transform: translateX(-50%);
+      background: black; padding: 5px 10px; border-radius: 4px; display: none;
+    }
+    #fileInput {
+      position: fixed; top: 10px; left: 10px;
+    }
   </style>
 </head>
 <body>
-  <canvas id="pdfCanvas"></canvas><button id="menuBtn">⋮</button>
+  <input type="file" id="fileInput" accept="application/pdf" />
+  <canvas id="pdfCanvas"></canvas>
 
+  <button id="menuBtn">&#8942;</button>
   <div id="menu">
-    <button id="libraryBtn">Library</button>
     <button id="outlineBtn">Outline</button>
     <button id="scrollBtn">Continue Scrolling</button>
     <button id="pageBtn">Page by Page</button>
-  </div>  <div id="sliderContainer">
+  </div>
+  <div id="sliderContainer">
     <input type="range" id="pageSlider" min="1" value="1" />
-  </div>  <div id="pageNum"></div>  <div id="libraryPopup">
-    <ul id="pdfList"></ul>
-  </div>  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>  <script>
+  </div>
+  <div id="pageNum"></div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/3.11.174/pdf.min.js"></script>
+  <script>
+    const fileInput = document.getElementById("fileInput");
     const canvas = document.getElementById("pdfCanvas");
     const ctx = canvas.getContext("2d");
     const menuBtn = document.getElementById("menuBtn");
     const menu = document.getElementById("menu");
+    const pageSlider = document.getElementById("pageSlider");
     const pageNum = document.getElementById("pageNum");
-    const slider = document.getElementById("pageSlider");
     const sliderContainer = document.getElementById("sliderContainer");
-    const libraryPopup = document.getElementById("libraryPopup");
-    const pdfList = document.getElementById("pdfList");
 
-    let pdfDoc = null, currentPage = 1, totalPages = 0;
-    let pageMode = "page";
-    let pdfFiles = [], currentFile = "", fileHandles = [];
+    let pdfDoc = null;
+    let currentPage = 1;
+    let totalPages = 0;
+    let renderMode = "page";
 
     const renderPage = (num) => {
       pdfDoc.getPage(num).then(page => {
         const viewport = page.getViewport({ scale: 1.5 });
         canvas.height = viewport.height;
         canvas.width = viewport.width;
-        const renderCtx = { canvasContext: ctx, viewport };
-        page.render(renderCtx);
-        slider.max = totalPages;
-        slider.value = num;
-        showPageNum(num);
-        saveLastPage();
+        page.render({ canvasContext: ctx, viewport });
+        pageSlider.value = num;
+        pageNum.textContent = `Page ${num}`;
+        pageNum.style.display = "block";
+        setTimeout(() => pageNum.style.display = "none", 1000);
       });
     };
 
-    const showPageNum = (num) => {
-      pageNum.textContent = `Page ${num}`;
-      pageNum.style.display = "block";
-      clearTimeout(pageNum.timeout);
-      pageNum.timeout = setTimeout(() => pageNum.style.display = "none", 1000);
-    };
-
-    const loadPDF = async (file) => {
-      currentFile = file.name;
-      const lastPage = parseInt(localStorage.getItem("pdf-" + file.name)) || 1;
-      const url = URL.createObjectURL(await file.getFile());
+    fileInput.addEventListener("change", async (e) => {
+      const file = e.target.files[0];
+      const url = URL.createObjectURL(file);
       pdfDoc = await pdfjsLib.getDocument(url).promise;
       totalPages = pdfDoc.numPages;
-      currentPage = lastPage;
-      if (pageMode === "page") renderPage(currentPage);
-    };
-
-    const saveLastPage = () => {
-      localStorage.setItem("pdf-" + currentFile, currentPage);
-    };
-
-    const selectFolderOrFile = async () => {
-      try {
-        const dirHandle = await window.showDirectoryPicker();
-        for await (const entry of dirHandle.values()) {
-          if (entry.kind === "file" && entry.name.endsWith(".pdf")) {
-            fileHandles.push(entry);
-          }
-        }
-        fileHandles.sort((a, b) => a.name.localeCompare(b.name));
-        pdfList.innerHTML = fileHandles.map(f => `<li>${f.name}</li>`).join("");
-        await loadPDF(fileHandles[0]);
-      } catch (e) {
-        const [file] = await window.showOpenFilePicker({ types: [{ accept: { "application/pdf": [".pdf"] } }] });
-        fileHandles = [file];
-        pdfList.innerHTML = `<li>${file.name}</li>`;
-        await loadPDF(file);
-      }
-    };
+      pageSlider.max = totalPages;
+      renderPage(currentPage);
+    });
 
     menuBtn.onclick = () => {
       menu.style.display = menu.style.display === "block" ? "none" : "block";
       sliderContainer.style.display = menu.style.display;
     };
 
-    slider.oninput = () => {
-      currentPage = parseInt(slider.value);
-      if (pageMode === "page") renderPage(currentPage);
+    pageSlider.oninput = () => {
+      currentPage = parseInt(pageSlider.value);
+      if (renderMode === "page") renderPage(currentPage);
     };
 
     document.getElementById("scrollBtn").onclick = async () => {
-      if (!pdfDoc) return;
-      pageMode = "scroll";
-      menu.style.display = "none";
-      sliderContainer.style.display = "none";
+      renderMode = "scroll";
       document.body.innerHTML = "";
       for (let i = 1; i <= pdfDoc.numPages; i++) {
         const page = await pdfDoc.getPage(i);
@@ -202,37 +104,14 @@
       }
     };
 
-    document.getElementById("pageBtn").onclick = () => location.reload();
-
-    document.getElementById("libraryBtn").onclick = () => {
-      libraryPopup.style.display = libraryPopup.style.display === "block" ? "none" : "block";
-    };
-
-    pdfList.onclick = async (e) => {
-      if (e.target.tagName === "LI") {
-        const selected = fileHandles.find(f => f.name === e.target.textContent);
-        if (selected) {
-          location.reload();
-        }
-      }
+    document.getElementById("pageBtn").onclick = () => {
+      location.reload();
     };
 
     document.getElementById("outlineBtn").onclick = async () => {
-      if (!pdfDoc) return;
       const outline = await pdfDoc.getOutline();
-      alert(outline.map(item => item.title).join("\n") || "No outline found.");
+      alert(outline.map(item => item.title).join('\\n') || \"No outline found\");
     };
-
-    document.addEventListener("keydown", e => {
-      if (pageMode === "page") {
-        if (e.key === "ArrowRight" && currentPage < totalPages) {
-          currentPage++; renderPage(currentPage);
-        } else if (e.key === "ArrowLeft" && currentPage > 1) {
-          currentPage--; renderPage(currentPage);
-        }
-      }
-    });
-
-    selectFolderOrFile();
-  </script></body>
+  </script>
+</body>
 </html>
